some changes with errors

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             </svg>
                           </div>
                           <div class="form-item wow animate__backInUp">
-                            <input type="password" class="form-input" name="conf_pass" id="conf_pass" placeholder="Confirm Password" data-required>
+                            <input type="p" class="form-input" name="conf_pass" id="conf_pass" placeholder="Confirm Password" data-required>
                             <label class="form-label" for="conf_pass">Confirm password</label>
                             <svg class="icon form-icon">
                                 <use xlink:href="assets/img/sprite.svg#confirm-password_icon"></use>
