--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
                                 <use xlink:href="assets/img/sprite.svg#second-name_icon"></use>
                             </svg>
                           </div>
-                          <div class="form-item form-item_select  wow animate__backInUp">
+                          <div class="form-item form-item_select wow animate__backInUp">
                             <select name="country" class="form-input form_select" id="country" data-required>
                                 <option value=""></option>
                                 <option value="+380">Ukraine</option>
                                 <option value="+1">USA</option>
                             </select>
-                            <label class="form-label" id="select-labell" for="country">Country</label>
+                            <label class="form-label" id="select-label" for="country">Country</label>
                             <svg class="icon form-icon">
                                 <use xlink:href="assets/img/sprite.svg#country_icon"></use>
                             </svg>
@@ -96,7 +96,7 @@
                             </svg>
                           </div>
                           <div class="form-item wow animate__backInUp">
-                            <input type="p" class="form-input" name="conf_pass" id="conf_pass" placeholder="Confirm Password" data-required>
+                            <input type="password" class="form-input" name="conf_pass" id="conf_pass" placeholder="Confirm Password" data-required>
                             <label class="form-label" for="conf_pass">Confirm password</label>
                             <svg class="icon form-icon">
                                 <use xlink:href="assets/img/sprite.svg#confirm-password_icon"></use>
